--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<html>
+  <head>
+    <title>タイトル</title>
+  </head>
+  <body>
+  本文
 
+  <img src=./IMG_4444.JPG alt=“空” height=512 width=512/>
+
+  </body>
+</html>
