--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="jp">
   <head>
+    <meta charset="utf-8">
     <title>タイトル</title>
+    <link rel="stylesheet"href="css/default.css"type="text/css">
   </head>
   <body>
   本文
