--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet"href="css/default.css"type="text/css">
   </head>
   <body>
+    <h1>
+      <span>
+        ★
+      </span>
+        こんにちは
+    </h1>
   本文
 
   <img src=./IMG_4444.JPG alt=“空” height=512 width=512/>
