--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       </span>
         こんにちは
     </h1>
+    <p id="lead">こんにちは</p>
   本文
 
   <img src=./IMG_4444.JPG alt=“空” height=512 width=512/>
