--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <link rel="stylesheet"href="css/default.css"type="text/css">
   </head>
   <body>
-    <h1>
+    <h2>
       <span>
         ★
       </span>
         こんにちは
     </h1>
     <p id="lead">こんにちは</p>
+    <p class="greeting">こんにちは</p>
+    
+    background.image:url();
+    background-repeat:repeat-x;
+
   本文
 
   <img src=./IMG_4444.JPG alt=“空” height=512 width=512/>
