--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet"href="css/default.css"type="text/css">
   </head>
   <body>
-    
-        ★
+    <h2>
+      <span>
+        ★    
+        </span>
+        こんにちは
+    </h2>
  
     <p id="lead">こんにちは</p>
     <p class="greeting">こんにちは</p>
