--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>タイトル</title>
-    <link rel="stylesheet"href="css/default.css"type="text/css">
+    <link rel="stylesheet"href="default.css"type="text/css">
   </head>
   <body>
     <h2>
